App/App-fundwave/frontend/frontend-fw-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    name: frontend
